--- a/SoundSharp/Properties/Resources.resx
+++ b/SoundSharp/Properties/Resources.resx
@@ -187,4 +187,16 @@
   <data name="listaRosa" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\listaRosa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="down_img" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\down_img.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="high_img" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\high_img.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mid_img" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mid_img.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mute_img" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mute_img.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
