--- a/SoundSharp/Properties/Resources.resx
+++ b/SoundSharp/Properties/Resources.resx
@@ -199,4 +199,13 @@
   <data name="mute_img" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mute_img.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lupa" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lupa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lupaNegra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lupaNegra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="playlistNegra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\playlistNegra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
